<resources>
    <string name="app_name">TesteDeRepositorio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!--pagina de login-->
    <string name="login_titulo">Login</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="btn_entrar">Entrar</string>

    <!--activity pagina cadastro evento-->
    <string name="titulo_evento">Titulo Evento</string>
    <string name="descricao_evento">Descrição Evento</string>
    <string name="local_evento">Local Evento</string>
    <string name="horario_evento">Horário Evento</string>
    <string name="data_evento">Data Evento</string>
    <string name="cadUser_btnCad">CADASTRAR</string>


    <string name="action_login">Login</string>
    <string name="action_sair">Sair</string>
    <string name="action_sobre">Sobre</string>
    <string name="img_sobre">ifrs</string>



    <!--activity linha-->
    <string name="action_edit">Editar</string>
    <string name="action_delete">Excluir</string>

    <!--activity atualizar evento-->
    <string name="textoRecebidoTitulo">Titulo</string>
    <string name="textoRecebidoDescricao">Descricão</string>
    <string name="textoRecebidoLocal">Local</string>
    <string name="textoRecebidoHorario">Horário</string>
    <string name="textoRecebidoData">Data</string>


    <!--pagina_inicial.xml-->
    <string name="action_search">Pesquisar</string>

    <!--activity linha-->
    <string name="linhaTitulo">Titulo Evento</string>
    <string name="linhaDescricao">Descrição Evento</string>
    <string name="linhaLocal">Local Evento</string>
    <string name="linhaData">Data Evento</string>
    <string name="linhaHorario">Horario Evento</string>

    <!--activity pagina inicial drawer-->
    <string name="lblPaginaInicial">Pagina Inicial</string>
    <string name="lblCadastrarEvento">Cadastrar Evento</string>
    <string name="lblListartEvento">Listar Evento</string>
    <string name="lblListarEventoComCard">Listar Evento com Card</string>

    <!--layout adapter list-->
    <string name="textViewTituloEvento">Titulo evento</string>
    <string name="textViewDescricaoEvento">Descricao Evento</string>
    <string name="textViewLocalEvento">Local Evento</string>
    <string name="textViewHorarioEvento">Horario Evento</string>
    <string name="textViewDataEvento">Data Evento</string>

    <string name="versao_app">Versão</string>

</resources>
