<?xml version="1.0" encoding="utf-8"?><!--<LinearLayout --><!--xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--tools:context=".AtualizarEventoActivity"--><!--android:orientation="horizontal">-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="Titulo: "
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/titulo_evento"
            android:layout_width="224dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/titulo_evento"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="Descrição: "
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/descricao_evento"
            android:layout_width="224dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/descricao_evento"
            android:inputType="textLongMessage"
            app:layout_constraintEnd_toEndOf="@+id/textoRecebidoTitulo"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            tools:layout_editor_absoluteY="70dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="Local: "
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/local_evento"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:ems="10"
            android:hint="@string/local_evento"
            android:inputType="text"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="@+id/textoRecebidoDescricao"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView7" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="Horário: "
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/horario_evento"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:ems="10"
            android:hint="@string/data_evento"
            android:inputType="time"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="@+id/textoRecebidoLocal"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView8" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="Data: "
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <EditText
            android:id="@+id/data_evento"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:ems="10"
            android:hint="@string/horario_evento"
            android:inputType="date"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="@+id/textoRecebidoHorario"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView9" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_cadastrar_evento"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="32dp"
        android:onClick="cadProduto"
        android:text="@string/cadUser_btnCad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="0.555" />


</android.support.constraint.ConstraintLayout>